--- a/heyBooks/src/main/webapp/WEB-INF/web.xml
+++ b/heyBooks/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
 	</listener>
 
 	<!-- Processes application requests -->
-	<servlet>
+	<servlet> <!-- 서블릿에 대응하는 서블릿 클래스를 지정해주는 부분  -->
 		<servlet-name>appServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
@@ -25,7 +25,7 @@
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 		
-	<servlet-mapping>
+	<servlet-mapping> <!-- url상의 요청명과 서블릿을 연결해주는 부분 -->
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
