--- a/heyBooks/src/main/webapp/WEB-INF/web.xml
+++ b/heyBooks/src/main/webapp/WEB-INF/web.xml
@@ -32,11 +32,14 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
+			<param-value>
+			/WEB-INF/spring/appServlet/servlet-context.xml
+			/WEB-INF/spring/spring-security.xml
+			</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-
+	
 	<servlet-mapping> <!-- url상의 요청명과 서블릿을 연결해주는 부분 -->
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
